<resources>
    <string name="app_name" translatable="false">surCO</string>
    <string name="app_name_long" translatable="false">surCO: Solar Urban Resource Collaboration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="icon_help">Help icon</string>
    <string name="toolbar_open">Open menu</string>
    <string name="toolbar_close">Close menu</string>
    <string name="all_sessions_upload">Upload saved sessions</string>
    <string name="logo">Logo</string>
    <string name="NaN" translatable="false">NaN</string>
    <string name="degree_symbol" translatable="false">°</string>
    <string name="no_degrees" translatable="false">-°</string>
    <string name="any_degrees_format" translatable="false">∠%1$s°</string>
    <string name="delete">Delete</string>
    <string name="was_deleted">Item deleted</string>
    <string name="share">Share</string>
    <string name="stop_button">Stop session</string>
    <string name="start_button">Start session</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logged_in_as">Logged in as: %s</string>
    <string name="logged_in">Logged in</string>
    <string name="login_description">Log In to start sharing your solar resource data!</string>
    <string name="login_no_account_question">Don\'t have an account?</string>
    <string name="welcome_continue">Start sharing measurements</string>
    <string name="welcome_message">Welcome to \nVIPV Acquisition Program!</string>
    <string name="permissions_title">Required permissions</string>
    <string name="permissions_needed">The following permissions are required to use this app. You will have access to the app once all permissions are granted:</string>
    <string name="permissions_show_in_settings">View permissions in system settings</string>
    <string name="permission_localization">Location</string>
    <string name="permission_localization_background">Location in background</string>
    <string name="permission_bluetooth">Bluetooth access</string>
    <string name="permission_notification">Push notifications</string>
    <string name="permission_grant">Grant</string>
    <string name="battery_whitelist">Disable battery optimization</string>
    <string name="settings">Settings</string>
    <string name="settings_app_behaviour">Behaviour</string>
    <string name="settings_upload_behaviour_title">When sessions will be uploaded</string>
    <string name="settings_api_endpoint">Self-hosting zone</string>
    <string name="settings_api_address">Address</string>
    <string name="settings_api_address_hint">http:// or https://</string>
    <string name="settings_api_port">Port</string>
    <string name="settings_user_token">User access token</string>
    <string name="settings_user_token_message">Token to post data to server</string>
    <string name="settings_api_test">Test API endpoint</string>
    <string name="settings_api_valid">Endpoint is reachable</string>
    <string name="settings_api_invalid">Could not reach endpoint</string>
    <string name="settings_api_testing">Probing connection with server…</string>
    <string name="settings_color_theme">Color theme</string>
    <string name="settings_bluetooth_scan_interval">Bluetooth Scan Interval</string>
    <string name="settings_bluetooth_scan_interval_invalid">Must be a natural number</string>
    <string name="settings_bluetooth_scan_interval_summary">Milliseconds</string>
    <string name="settings_manage_sessions">Manage saved session files</string>
    <string name="settings_open_battery_optimization_settings">Open battery optimization settings</string>
    <string name="settings_api_uri_change_title">Confirm action</string>
    <string name="settings_api_uri_change_message">This will log you out and your personal data will be shared to another endpoint. Privacy Policy and other legal claims won\'t apply.</string>
    <string name="settings_unsupervised_mode">Unsupervised Mode</string>
    <string name="settings_unsupervised_mode_summary">Allow extended session duration</string>
    <string name="settings_unsupervised_mode_enabled">Enabled - ongoing sessions are stopped and restarted at midnight (keeps beacons config)</string>
    <string name="settings_unsupervised_mode_disabled">Disabled - sessions only stop by user interaction</string>
    <string name="version">Version: %1$s (%2$d)</string>
    <string name="credits">App developed by the ISI-IES research group at Universidad Politécnica de Madrid.</string>
    <string name="data_recollection_get_in_contact">To get in contact with us, to provide feedback, or ask for deletion or modification of your data, use any of the methods referenced at the bottom.\nThis application shares GPS location, phone orientation, Bluetooth beacon measurements, model and manufacturer of the phone, and Android version to a web server when a user is logged in and somewhere in time when a session has ended.\nData collected will be used for scientific purposes and won\'t be shared with third parties under no circumstance, except if it asked by the same user or the legal authorities.</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="email" translatable="false">Email</string>
    <string name="email_subject">[surCO]: App Inquiry</string>
    <string name="beacons_detected_zero">No beacons detected</string>
    <string name="beacons_detected_nonzero">Nearby beacons: %1$d</string>
    <string name="beacons_detected_paused">Monitoring is disabled</string>
    <string name="beacon_last_read">Last read:</string>
    <string name="beacon_info_incomplete">Click to add missing required info fields.</string>
    <string name="beacon_detail_position_unknown">Unknown position</string>
    <string name="empty_all_data">Delete all data?</string>
    <string name="empty_all_data_confirmation">This action can\'t be undone.</string>
    <string name="empty_session_nothing_to_do">Session cleared</string>
    <string name="upload_successful">Sessions uploaded</string>
    <string name="upload_failed">Could not upload sessions</string>
    <string name="no_data_to_share">Cannot export an empty session</string>
    <string name="uploading_session_data">Uploading saved sessions…</string>
    <string name="no_data_to_upload">No past sessions pending for upload</string>
    <string name="session_started">Measurement session has started</string>
    <string name="session_stopped">Measurement session has ended</string>
    <string name="current_session_empty">Delete current session</string>
    <string name="current_session_share">Share current session</string>
    <string name="low_compass_precision_title">Low Compass Precision</string>
    <string name="low_compass_precision_message">Please move your phone gently in circles to recalibrate the compass.</string>
    <string name="session_not_active">You must log in to your account first.</string>
    <string name="client_deprecated_warning_title">Time to Update!</string>
    <string name="client_deprecated_warning_message">The server recommends to update.\nYou may find new super features in the latest version!\nYou can still log in and upload sessions.</string>
    <string name="client_obsolete_error_title">Obsolete version</string>
    <string name="client_obsolete_error_message">Please update the app.\nThis application version is not allowed by the server.\nYou can\'t log in.</string>
    <string name="beacon_details">Beacon details</string>
    <string name="beacon_detail_description_hint">Optional beacon description</string>
    <string name="beacon_detail_tilt">Tilt</string>
    <string name="beacon_detail_direction">Direction</string>
    <string name="beacon_detail_ok">Beacon configured and online</string>
    <string name="beacon_detail_info_error">Missing required position data</string>
    <string name="beacon_detail_out_of_range_error">Could not see beacon during the last seconds</string>
    <string name="measure_tilt">Measure</string>
    <string name="bad_email">This email is not registered</string>
    <string name="bad_password">Incorrect password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Only alphanumeric and underscores are allowed</string>
    <string name="invalid_password">Should be at least 8 characters long</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_message">"Could not connect to the server. Check your Internet connection or try later."</string>
    <string name="ok">OK</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Repeat password</string>
    <string name="bad_email_already_registered">This email is already registered</string>
    <string name="register_here">Register here</string>
    <string name="logged_out">User logged out</string>
    <string name="invalid_password_equals">Passwords don\'t match</string>
    <string name="notification_ongoing_channel_name">Ongoing Acquisition Sessions</string>
    <string name="notification_ongoing_channel_description">Notifies when a measurements session is active.</string>
    <string name="notification_ongoing_title">Acquisition session underway</string>
    <string name="notification_ongoing_text">Beacon monitoring is active.</string>
    <string name="stop_notification_button">Stop</string>
    <string name="notification_watchdog_channel_name">Bluetooth or Location disabled.</string>
    <string name="notification_watchdog_channel_description">Notifies Bluetooth or Location should be enabled.</string>
    <string name="notification_no_location_bluetooth_title">Connectivity Issue</string>
    <string name="notification_no_location_bluetooth_text">Bluetooth and Location disabled.</string>
    <string name="notification_no_location_text">Location disabled.</string>
    <string name="notification_no_bluetooth_text">Bluetooth disabled.</string>
    <string name="want_to_use_offline_question">Prefer taking measurements for yourself?</string>
    <string name="want_to_use_offline_description">You can use the app without an account, but you won\'t be able to upload data for scientific research.</string>
    <string name="continue_offline">Continue without account</string>
    <string name="manage_sessions">Manage cached sessions</string>
    <string name="manage_sessions_no_sessions_available">No sessions are stored locally</string>
    <string name="manage_sessions_sessions_stored">There are %1$d sessions pending for upload</string>
    <string name="delete_all_sessions">Delete all sessions</string>
    <string name="upload_all_sessions">Upload all sessions</string>
    <string name="confirm_undonable_action">Are you sure? This action cannot be undone.</string>
    <string name="all_sessions_deleted">Deleted all cached sessions</string>
    <string name="deletion_failed">Can\'t delete all sessions</string>
    <string name="manage_sessions_delete_session_file">Delete Session File</string>
    <string name="manage_sessions_confirm_delete_single_file">Are you sure you want to delete \"%s\"? This action cannot be undone.</string>
    <string name="privacy_policy_accept">Accept</string>
    <string name="privacy_policy_reject">Reject (use offline)</string>
    <string name="privacy_policy_fetching">Fetching latest Privacy Policy…</string>
</resources>