<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_arrow_back_24"/>

    <item
        android:id="@+id/nav_login"
        android:title="@string/login"
        android:icon="@drawable/baseline_arrow_forward_24"/>

    <item
        android:id="@+id/nav_about"
        android:title="@string/about"
        android:icon="@drawable/baseline_info_24"/>

    <item
        android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/baseline_help_24"/>
</menu>