<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/settings_app_behaviour"
        android:icon="@drawable/baseline_settings_24">

    <EditTextPreference
        android:key="user_token"
        android:title="@string/settings_user_token"
        android:inputType="textPassword"
        android:dialogTitle="@string/settings_user_token"
        android:dialogMessage="@string/settings_user_token_message" />

    <!-- SwitchPreferenceCompat
        android:key="only_wifi_upload"
        android:title="@string/settings_only_wifi_upload"
        android:summaryOn="@string/settings_only_wifi_upload_on"
        android:summaryOff="@string/settings_only_wifi_upload_off"/ -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_api_endpoint"
        android:icon="@drawable/baseline_open_in_browser_24">

    <EditTextPreference
        android:key="api_uri"
        android:title="@string/settings_api_address" />

    <EditTextPreference
        android:key="api_port"
        android:title="@string/settings_api_port" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>