<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.beaconble.ui.FragHome"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_fragBeaconDetails"
            app:destination="@id/fragBeaconDetails" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.beaconble.ui.FragSettings"
        android:label="@string/settings" >
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.beaconble.ui.AboutFragment"
        android:label="@string/about" >
        <action
            android:id="@+id/action_aboutFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragBeaconDetails"
        android:name="com.example.beaconble.ui.FragBeaconDetails"
        android:label="@string/beacon_details"
        tools:layout="@layout/fragment_beacon_details" >
        <action
            android:id="@+id/action_fragBeaconDetails_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>